appId: com.apptestesmobile
name: 03-calculadora
---
- launchApp
- tapOn:
    text: "Funcional"
    optional: true
- tapOn:
    text: "Calculadora"
    optional: true
- tapOn:
    text: "7"
    optional: true
- tapOn:
    text: "+"
    optional: true
- tapOn:
    text: "3"
    optional: true
- tapOn:
    text: "="
    optional: true
- assertVisible:
    text: "10"
    optional: true
